--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+        <a-assets>
+            <video id="video" src="video.mp4" autoplay loop muted playsinline webkit-playsinline></video>
+        </a-assets>
         <a-marker preset="hiro">
             <a-video
-                src="video.mp4"
+                src="#video"
                 width="1"
                 height="0.5625"
                 position="0 0 0"
                 rotation="-90 0 0"
-                autoplay
-                loop
-                muted
             ></a-video>
         </a-marker>
         <a-entity camera></a-entity>
