--- a/index.html
+++ b/index.html
@@ -10,17 +10,32 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
         <a-assets>
-            <video id="video" src="video.mp4" autoplay loop muted playsinline webkit-playsinline></video>
+            <video id="video1" src="video1.mp4" autoplay loop muted playsinline webkit-playsinline></video>
+            <video id="video2" src="video2.mp4" autoplay loop muted playsinline webkit-playsinline></video>
         </a-assets>
+        
+        <!-- Hiro Marker -->
         <a-marker preset="hiro">
             <a-video
-                src="#video"
+                src="#video1"
                 width="1"
                 height="0.5625"
                 position="0 0 0"
                 rotation="-90 0 0"
             ></a-video>
         </a-marker>
+
+        <!-- Kanji Marker -->
+        <a-marker preset="kanji">
+            <a-video
+                src="#video2"
+                width="1"
+                height="0.5625"
+                position="0 0 0"
+                rotation="-90 0 0"
+            ></a-video>
+        </a-marker>
+
         <a-entity camera></a-entity>
     </a-scene>
 </body>
