--- a/index.html
+++ b/index.html
@@ -3,34 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WebAR Video Demo</title>
+    <title>Custom WebAR Demo</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
         <a-assets>
-            <video id="video1" src="videos/video1.mp4" autoplay loop muted playsinline webkit-playsinline></video>
-            <video id="video2" src="videos/video2.mp4" autoplay loop muted playsinline webkit-playsinline></video>
-            <img id="marker1" src="markers/marker1.png">
-            <img id="marker2" src="markers/marker2.png">
+            <!-- Add your custom video here -->
+            <video id="customVideo" src="videos/custom.mp4" autoplay loop muted playsinline webkit-playsinline></video>
+            <!-- Add your custom marker pattern here -->
+            <img id="customMarker" src="markers/markerscustom.png">
         </a-assets>
         
-        <!-- First Marker -->
-        <a-marker type="pattern" url="markers/marker1.patt">
+        <!-- Custom Marker -->
+        <a-marker type="pattern" url="markers/markerscustom.patt">
             <a-video
-                src="#video1"
-                width="1"
-                height="0.5625"
-                position="0 0 0"
-                rotation="-90 0 0"
-            ></a-video>
-        </a-marker>
-
-        <!-- Second Marker -->
-        <a-marker type="pattern" url="markers/marker2.patt">
-            <a-video
-                src="#video2"
+                src="#customVideo"
                 width="1"
                 height="0.5625"
                 position="0 0 0"
