--- a/index.html
+++ b/index.html
@@ -6,13 +6,38 @@
     <title>Custom WebAR Demo</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <style>
+        #loading {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.8);
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            font-family: Arial, sans-serif;
+        }
+        #loading.error {
+            color: #ff4444;
+        }
+    </style>
 </head>
 <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+    <div id="loading">Initializing AR...</div>
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" style="display: none;">
         <a-assets>
-            <!-- Add your custom video here -->
-            <video id="customVideo" src="videos/custom.mp4" autoplay loop muted playsinline webkit-playsinline></video>
-            <!-- Add your custom marker pattern here -->
+            <video id="customVideo" 
+                   src="videos/myvideo.mp4" 
+                   autoplay 
+                   loop 
+                   muted 
+                   playsinline 
+                   webkit-playsinline>
+            </video>
             <img id="customMarker" src="markers/markerscustom.png">
         </a-assets>
         
@@ -29,5 +54,60 @@
 
         <a-entity camera></a-entity>
     </a-scene>
+    <script>
+        // Debug video loading
+        const loadingDiv = document.getElementById('loading');
+        const scene = document.querySelector('a-scene');
+        const video = document.getElementById('customVideo');
+
+        // Log video source
+        console.log('Video source:', video.src);
+        console.log('Video path:', 'videos/myvideo.mp4');
+
+        // Check if video file exists
+        fetch('videos/myvideo.mp4')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Video file not found');
+                }
+                console.log('Video file exists');
+                loadingDiv.textContent = 'Loading video...';
+            })
+            .catch(error => {
+                console.error('Error checking video file:', error);
+                loadingDiv.textContent = 'Error: Video file not found';
+                loadingDiv.classList.add('error');
+            });
+
+        // Video loading events
+        video.addEventListener('error', (e) => {
+            console.error('Video error:', e);
+            loadingDiv.textContent = 'Error loading video';
+            loadingDiv.classList.add('error');
+        });
+
+        video.addEventListener('loadeddata', () => {
+            console.log('Video loaded successfully');
+            loadingDiv.textContent = 'Video loaded. Point camera at marker...';
+            scene.style.display = 'block';
+            loadingDiv.style.display = 'none';
+        });
+
+        video.addEventListener('waiting', () => {
+            console.log('Video waiting for data');
+            loadingDiv.textContent = 'Buffering video...';
+        });
+
+        video.addEventListener('playing', () => {
+            console.log('Video started playing');
+        });
+
+        // Try to play the video
+        video.play().catch(error => {
+            console.error('Error playing video:', error);
+            loadingDiv.textContent = 'Error: Could not play video';
+            loadingDiv.classList.add('error');
+        });
+    </script>
 </body>
 </html> 
